--- a/test/basic-test.html
+++ b/test/basic-test.html
@@ -108,6 +108,9 @@
             expect(outputPoint1.pointConnections[0]).to.be.equal(graph.graphConnections[0]);
             expect(inputPoint2.pointConnections[0]).to.be.equal(graph.graphConnections[0]);
             expect(outputPoint1.pointConnections[0]).to.be.equal(inputPoint2.pointConnections[0]);
+            expect(function () {
+                outputPoint1.connect(inputPoint2);
+            }).to.throw();
             outputPoint1.disconnect(inputPoint2);
             expect(graph.graphConnections).to.have.length(0);
             expect(outputPoint1.pointConnections).to.have.length(0);
@@ -120,12 +123,67 @@
             expect(outputPoint1.pointConnections[0]).to.be.equal(graph.graphConnections[0]);
             expect(inputPoint2.pointConnections[0]).to.be.equal(graph.graphConnections[0]);
             expect(outputPoint1.pointConnections[0]).to.be.equal(inputPoint2.pointConnections[0]);
+            expect(function () {
+                inputPoint2.connect(outputPoint1);
+            }).to.throw();
             // Test associativity point1.disconnect(point2) === point2.disconnect(point1)
             inputPoint2.disconnect(outputPoint1);
             expect(graph.graphConnections).to.have.length(0);
             expect(outputPoint1.pointConnections).to.have.length(0);
             expect(inputPoint2.pointConnections).to.have.length(0);
         });
+        test("block points connect and singleConnection and disconnectAll", function () {
+            var graph = new dudeGraph.Graph();
+            var block1 = new dudeGraph.Block({});
+            var outputPoint1 = new dudeGraph.Point(true, {
+                "pointName": "out",
+                "pointValueType": "Number",
+                "pointSingleConnection": false
+            });
+            expect(outputPoint1.pointSingleConnection).to.be.false;
+            var outputPoint2 = new dudeGraph.Point(true, {
+                "pointName": "out2",
+                "pointValueType": "Number",
+                "pointSingleConnection": true
+            });
+            expect(outputPoint2.pointSingleConnection).to.be.true;
+            graph.addBlock(block1);
+            block1.addPoint(outputPoint1);
+            block1.validate();
+            var block2 = new dudeGraph.Block({});
+            var inputPoint1 = new dudeGraph.Point(false, {
+                "pointName": "in",
+                "pointValueType": "Number"
+            });
+            expect(inputPoint1.pointSingleConnection).to.be.true;
+            var inputPoint2 = new dudeGraph.Point(false, {
+                "pointName": "in2",
+                "pointValueType": "Number"
+            });
+            expect(inputPoint2.pointSingleConnection).to.be.true;
+            graph.addBlock(block2);
+            block2.addPoint(inputPoint1);
+            block2.addPoint(inputPoint2);
+            block2.validate();
+            outputPoint1.connect(inputPoint1);
+            outputPoint1.connect(inputPoint2);
+            expect(graph.graphConnections).to.have.length(2);
+            expect(outputPoint1.pointConnections).to.have.length(2);
+            expect(function () {
+                inputPoint2.connect(outputPoint2);
+            }).to.throw();
+            outputPoint1.disconnectAll();
+            expect(graph.graphConnections).to.have.length(0);
+            expect(outputPoint1.pointConnections).to.have.length(0);
+            outputPoint1.connect(inputPoint1);
+            outputPoint1.connect(inputPoint2);
+            expect(graph.graphConnections).to.have.length(2);
+            expect(outputPoint1.pointConnections).to.have.length(2);
+            outputPoint1.disconnect(inputPoint2);
+            expect(graph.graphConnections).to.have.length(1);
+            expect(outputPoint1.pointConnections).to.have.length(1);
+        });
+        /*
         test("block points values", function () {
 
         });
@@ -259,7 +317,8 @@
             expect(function () {
                 outputPoint1_2.connect(inputPoint2_2);
             }).to.throw();
-        });
+         });
+         */
     });
 </script>
 </body>
